sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:16: error: '<-' expected but ')' found.
		for (fin to debut by -1) {
                                       ^AlgCocktailSort2:23: error: illegal start of simple expression
	}
        ^AlgCocktailSort2:25: error: 'while' expected but '}' found.
}
^